@@ -1,6 +1,6 @@
 {
   "name": "enemyracemanager",
-  "version": "1.8.1",
+  "version": "1.9.0",
   "date": "2021-07-10",
   "title": "Enemy Race Manager",
   "author": "heyqule",
